# FastAPI

./: README.md  pyproject.toml
fastapi_project/: alembic.ini  auth.py  background_tasks.py  celery_results.sqlite  celerydb.sqlite  database.py  main.py  middleware.py  models.py  sentry.py  serializers.py
fastapi_project/alembic/: env.py
fastapi_project/alembic/versions/: 63a82540aa46_initial_migration.py  8e981482a2be_added_candidate_logs_table.py
tests/: tests.py
